--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@ set -g @nord_tmux_no_patched_font "1"
 # Entries from spicycode's tmux.conf
 # https://gist.github.com/spicycode/1229612
 
+# Color settings
+set-option -sa terminal-overrides ',screen-256color:RGB'
+
 ## 0 is too far from `
 set -g base-index 1
 
