--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,12 @@ set -g @nord_tmux_no_patched_font "1"
 # https://gist.github.com/spicycode/1229612
 
 # Color settings
-set-option -sa terminal-overrides ',screen-256color:RGB'
+# MacOS
+# set-option -sa terminal-overrides ',screen-256color:RGB'
+
+# Artix Linux + Swaywm
+set-option -g default-terminal 'tmux-256color'
+set-option -sa terminal-overrides ',alacritty:RGB'
 
 ## 0 is too far from `
 set -g base-index 1
