--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -81,6 +81,6 @@
         "max-length": 40,
         "interval": 30, // Remove this if your script is endless and write in loop
         "exec": "$HOME/.config/waybar/mediaplayer.sh 2> /dev/null", // Script in resources folder
-        "exec-if": "pgrep spotify"
+        "exec-if": "pgrep psst-gui"
     }
 }
