--- a/.config/sway/config
+++ b/.config/sway/config
@@ -125,27 +125,27 @@ input type:keyboard {
 # Workspaces:
 #
     # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
+    bindsym $mod+1 workspace 1:term
+    bindsym $mod+2 workspace 2:web
     bindsym $mod+3 workspace number 3
     bindsym $mod+4 workspace number 4
     bindsym $mod+5 workspace number 5
     bindsym $mod+6 workspace number 6
     bindsym $mod+7 workspace number 7
     bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
+    bindsym $mod+9 workspace 9:telegram
+    bindsym $mod+0 workspace 10:music
     # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
+    bindsym $mod+Shift+1 move container to workspace 1:term
+    bindsym $mod+Shift+2 move container to workspace 2:web
     bindsym $mod+Shift+3 move container to workspace number 3
     bindsym $mod+Shift+4 move container to workspace number 4
     bindsym $mod+Shift+5 move container to workspace number 5
     bindsym $mod+Shift+6 move container to workspace number 6
     bindsym $mod+Shift+7 move container to workspace number 7
     bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
+    bindsym $mod+Shift+9 move container to workspace 9:telegram
+    bindsym $mod+Shift+0 move container to workspace 10:music
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
@@ -213,23 +213,27 @@ bindsym $mod+r mode "resize"
 # Remove the blue window border and title
 default_border none
 
-# Increase volume
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +1000
+#
+# Keybinding Actions:
+#
 
-# Decrease volume
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -1000
+    # Increase volume
+    bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +1000
 
-# Mute volume
-bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+    # Decrease volume
+    bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -1000
 
-# Mute microphone
-bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+    # Mute volume
+    bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 
-# Increase Brightness
-bindsym  XF86MonBrightnessDown exec brightnessctl set 5%-
+    # Mute microphone
+    bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
-# Decrease Brightness
-bindsym  XF86MonBrightnessUp exec brightnessctl set 5%+
+    # Increase Brightness
+    bindsym  XF86MonBrightnessDown exec brightnessctl set 5%-
+
+    # Decrease Brightness
+    bindsym  XF86MonBrightnessUp exec brightnessctl set 5%+
 
 # Status Bar:
 #
