--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -12,12 +12,12 @@
         "all-outputs": false,
         "format": "{icon}",
         "format-icons": {
-            "1:web": "",
+            "1:term": "",
+            "2:web": "",
             "2:code": "",
-            "3:term": "",
             "4:work": "",
-            "5:music": "",
-            "6:docs": "",
+            "9:telegram": "",
+            "10:music": "",
             "urgent": "",
             "focused": "",
             "default": ""
@@ -79,7 +79,7 @@
     "custom/spotify": {
         "format": " {}",
         "max-length": 40,
-        "interval": 30, // Remove this if your script is endless and write in loop
+        "interval": 3, // Remove this if your script is endless and write in loop
         "exec": "$HOME/.config/waybar/mediaplayer.sh 2> /dev/null", // Script in resources folder
         "exec-if": "pgrep psst-gui"
     }
