--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,8 +27,8 @@ setw -g mode-keys vi
 #setw -g mode-mouse on
 setw -g monitor-activity on
 
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -45,6 +45,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+#bind-key y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 ## Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
