--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,6 +14,19 @@ set $down j
 set $up k
 set $right l
 
+
+set $cl_high #434c5e
+set $cl_indi #88c0d0
+set $cl_back #3b4252
+set $cl_fore #88c0d0
+set $cl_urge #bf616a
+
+# Colors                border   bg       text     indi     childborder
+client.focused          $cl_high $cl_high $cl_fore $cl_indi $cl_high
+client.focused_inactive $cl_back $cl_back $cl_fore $cl_back $cl_back
+client.unfocused        $cl_back $cl_back $cl_fore $cl_back $cl_back
+client.urgent           $cl_urge $cl_urge $cl_fore $cl_urge $cl_urge
+
 # Your preferred terminal emulator
 set $term alacritty
 
@@ -166,10 +179,10 @@ input type:keyboard {
     bindsym $mod+f fullscreen
 
     # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+space floating toggle
+    #bindsym $mod+Shift+space floating toggle
 
     # Swap focus between the tiling area and the floating area
-    bindsym $mod+space focus mode_toggle
+    #bindsym $mod+space focus mode_toggle
 
     # Move focus to the parent container
     bindsym $mod+a focus parent
@@ -227,40 +240,37 @@ default_border none
     bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 
     # Mute microphone
-    bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+    # bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+    bindsym $mod+m exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
     # Increase Brightness
-    bindsym  XF86MonBrightnessDown exec brightnessctl set 5%-
+    bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
 
     # Decrease Brightness
-    bindsym  XF86MonBrightnessUp exec brightnessctl set 5%+
+    bindsym XF86MonBrightnessUp exec brightnessctl set 5%+
 
+    # Pause Media Player
+    bindsym $mod+space exec playerctl play-pause
+
+    # Next Song
+    bindsym $mod+n exec playerctl next
+
+    # Previous Song
+    bindsym $mod+p exec playerctl previous
+#
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-bar swaybar_command waybar
-#bar {
-#    position top
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-#    status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
 
-#    colors {
-#        statusline #ffffff
-#        background #323232
-#        inactive_workspace #32323200 #32323200 #5c5c5c
-#    }
-#}
+    bar swaybar_command waybar
 
 #
 # GTK Theme
 #
 exec_always {
-    gsettings set org.gnome.desktop.interface gtk-theme "Nordic"
-    gsettings set org.gnome.desktop.wm.preferences theme "Nordic"
+    gsettings set org.gnome.desktop.interface gtk-theme "Nordic-darker-standard-buttons-v40"
+    gsettings set org.gnome.desktop.wm.preferences theme "Nordic-darker-standard-buttons-v40"
 }
-
-include /etc/sway/config.d/*
 
 #
 # Start My Apps
@@ -273,3 +283,5 @@ include /etc/sway/config.d/*
 
     workspace 1:term
     exec $term
+ 
+include /etc/sway/config.d/*
