--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,8 +46,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 #bind-key y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 ## Use Alt-vim keys without prefix key to switch panes
